# memshare

./: CMakeLists.txt  README.md
src/mem/include/: mem.h  shared_mem.h
src/mem/src/: mem.cpp  shared_mem.cpp
src/tests/: test_main.cpp
src/utility/include/: error.h  intervals.h  misc.h
src/utility/src/: intervals.cpp  misc.cpp
